--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,23 @@
-include(ExternalProject)
-
-ExternalProject_Add(
-    fiddle
-    GIT_REPOSITORY https://github.com/sosz/temp-cpp.git
-    PREFIX fiddle
-    INSTALL_DIR install
+package(
+    gtest
+    GITHUB_REPO google/googletest
+    TAG release-1.8.0
+    SUBDIR googletest
+    LIBRARIES gtest->pthread gtest_main->gtest
 )
+
+include_directories(include)
+
+set(
+    SOURCES
+    include/assert_as_string.h
+    include/assert_same.h
+    include/catergorized_test.h
+    lex/test.cpp
+    util/test_enum_class.cpp
+    util/test_named_tuple.cpp
+)
+
+add_executable(fp_test ${SOURCES})
+target_link_libraries(fp_test fp)
+target_use_packages(fp_test gtest LINK gtest_main)
