--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,6 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# build
+build/
+build-release/
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# workspace
+.idea/
