--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,18 +8,7 @@ package(
 
 include_directories(include)
 
-set(
-    SOURCES
-    include/assert_as_string.h
-    include/assert_same.h
-    include/catergorized_test.h
-    lex/test.cpp
-    util/test_box.cpp
-    util/test_enum_class.cpp
-    util/test_named_tuple.cpp
-    util/test_type_name.cpp
-    util/test_va_args.cpp
-)
+glob_sources(SOURCES *.h *.cpp)
 
 add_executable(fp_test ${SOURCES})
 target_link_libraries(fp_test fp)
