Improve `glob_sources()` (automatic rebuild)

--- a/src/fp/CMakeLists.txt
+++ b/src/fp/CMakeLists.txt
@@ -1,4 +1,5 @@
 glob_sources(SOURCES *.h *.cpp)
 
 add_library(fp ${SOURCES})
+add_dependencies(fp ${SOURCES_DEP})
 target_use_packages(fp boost-preprocessor boost-range)
