--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,5 +11,6 @@ include_directories(include)
 glob_sources(SOURCES *.h *.cpp)
 
 add_executable(fp_test ${SOURCES})
+add_dependencies(fp_test ${SOURCES_DEP})
 target_link_libraries(fp_test fp)
 target_use_packages(fp_test gtest LINK gtest_main)
